# Stack-4.0

./: .gitignore  README.md  agent_loop.py  benchmark.py  benchmark_results.json  cleanup_vm.sh  dataset_README.md  deep_cleanup.sh  finish_and_deploy.py  hf_space_app.py  hf_space_requirements.txt  llama3_1_lora_config.yaml  modal_serve.py  model_card.md  parse_loss.py  post_training.sh  pyproject.toml  reddit_post_final.md  reddit_post_stack3.md  requirements_agent.txt  requirements_serve.txt  run_pipeline.sh  serve_model.py  train.sh  train_direct.py  train_direct.sh  train_qwen.py  train_v100.py  upload_model_to_hf.py
